# spotify-playlist-tracker

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: docker-image.yml
scripts/: build_payload_from_csv.py  create_playlist_from_payload.py  cross_reference.py
src/spotify_playlist_tracker/: auth.py  cli.py  diff.py  models.py  scheduler.py  settings.py  spotify_api.py  storage.py  webhook.py
tests/: test_auth.py  test_cli.py  test_diff.py  test_scheduler.py  test_settings.py  test_storage.py  test_webhook.py
