[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "spotify-playlist-tracker"
version = "0.1.0"
description = "Track Spotify playlist changes across repeated runs"
requires-python = ">=3.11"
dependencies = [
  "croniter>=2,<7",
  "httpx>=0.27,<1",
  "Markdown>=3.7,<4",
  "python-dotenv>=1,<2",
]

[project.optional-dependencies]
dev = [
  "pytest>=8,<9",
]

[project.scripts]
spotify-playlist-tracker = "spotify_playlist_tracker.cli:main"

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.setuptools.packages.find]
where = ["src"]
